src/test/deca/context/invalid/created/voidType.deca
//voidType.deca:3:4: void n'est pas un type pour initialiser
{
    void t;
}